--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,5 @@
-exportPattern("^[[:alpha:]]+")
+export(sbg.sim)
+importFrom(base,abs)
+importFrom(base,cat)
+importFrom(base,mean)
+importFrom(base,sqrt)
