--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,14 @@ Collate:
     'capm-internal.R'
     'common.R'
     'sbg_sim.R'
+    '_sbg_ce.R'
+    '_sbg_clv.R'
+    '_sbg_incr_churn.R'
+    '_sbg_plot.R'
+    '_sbg_predict.R'
+    '_sbg_ret_rate.R'
+    '_sbg_summary.R'
+    '_sbg_survivors.R'
+    'sbg_fitter.R'
+    'sbg_main.R'
+    'sbg_fitted.R'
